add balance check

--- a/metabonding/mandos/project_in_the_past.scen.json
+++ b/metabonding/mandos/project_in_the_past.scen.json
@@ -194,6 +194,19 @@
                 "gas": "*",
                 "refund": "*"
             }
+        },
+        {
+            "step": "checkState",
+            "accounts": {
+                "address:user1": {
+                    "nonce": "*",
+                    "balance": "0",
+                    "esdt": {
+                        "str:PROJ-123456": "35,714,285"
+                    }
+                },
+                "+": ""
+            }
         }
     ]
 }
