--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,6 +6,10 @@ on:
       - main
   pull_request:
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   contracts:
     name: Contracts
