--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "node",
             "name": "Dump env",
             "args": ["-e", "console.log(JSON.stringify(process.env, null, 4))"],
-            "env": {"PATH":"${env:HOME}/elrondsdk/vendor-rust/bin:${env:HOME}/elrondsdk/erdpy-venv/bin:${env:HOME}/elrondsdk/vmtools:${env:HOME}/elrondsdk/nodejs/latest/bin:${env:PATH}","VIRTUAL_ENV":"${env:HOME}/elrondsdk/erdpy-venv","RUSTUP_HOME":"${env:HOME}/elrondsdk/vendor-rust","CARGO_HOME":"${env:HOME}/elrondsdk/vendor-rust"}
+            "env": {"PATH":"${env:HOME}/multiversx-sdk/vendor-rust/bin:${env:HOME}/multiversx-sdk/mxpy-venv/bin:${env:HOME}/multiversx-sdk/vmtools:${env:HOME}/multiversx-sdk/nodejs/latest/bin:${env:PATH}","VIRTUAL_ENV":"${env:HOME}/multiversx-sdk/mxpy-venv","RUSTUP_HOME":"${env:HOME}/multiversx-sdk/vendor-rust","CARGO_HOME":"${env:HOME}/multiversx-sdk/vendor-rust"}
         }
     ]
 }
