--- a/metabonding/Cargo.toml
+++ b/metabonding/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
 name = "metabonding"
 version = "0.0.0"
-authors = [ "Dorin Marian Iancu, dorin.iancu@elrond.com" ]
+authors = ["Dorin Marian Iancu, dorin.iancu@multiversx.com"]
 edition = "2018"
 publish = false
 
 [lib]
 path = "src/lib.rs"
+[dependencies.multiversx-sc]
+version = "=0.39.4"
 
-[dependencies.elrond-wasm]
-version = "=0.38.0"
+[dependencies.multiversx-sc-modules]
+version = "=0.39.4"
 
-[dependencies.elrond-wasm-modules]
-version = "=0.38.0"
-
-[dev-dependencies.elrond-wasm-debug]
-version = "=0.38.0"
+[dependencies.sc_whitelist_module]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "fdb1fb4"
 
 [dev-dependencies]
 num-bigint = "0.4.2"
@@ -23,5 +23,5 @@ num-traits = "0.2"
 hex = "0.4"
 hex-literal = "0.3.4"
 
-[dependencies]
-sc_whitelist_module = { git = "https://github.com/multiversx/mx-exchange-sc", rev = "7b6564f" }
+[dev-dependencies.multiversx-sc-scenario]
+version = "=0.39.4"
