--- a/metabonding/meta/Cargo.toml
+++ b/metabonding/meta/Cargo.toml
@@ -3,15 +3,11 @@ name = "metabonding-meta"
 version = "0.0.0"
 edition = "2018"
 publish = false
-authors = [ "Dorin Marian Iancu, dorin.iancu@elrond.com" ]
+authors = ["Dorin Marian Iancu, dorin.iancu@multiversx.com"]
 
 [dev-dependencies]
-
 [dependencies.metabonding]
 path = ".."
 
-[dependencies.elrond-wasm]
-version = "=0.38.0"
-
-[dependencies.elrond-wasm-debug]
-version = "=0.38.0"
+[dependencies.multiversx-sc-meta]
+version = "0.39.4"
