--- a/metabonding/meta/Cargo.toml
+++ b/metabonding/meta/Cargo.toml
@@ -6,8 +6,10 @@ publish = false
 authors = ["Dorin Marian Iancu, dorin.iancu@multiversx.com"]
 
 [dev-dependencies]
+
 [dependencies.metabonding]
 path = ".."
 
 [dependencies.multiversx-sc-meta]
-version = "=0.44.0"
+version = "=0.45.2"
+default-features = false
