Use hotfix of rust framework 0.36.1.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,7 @@ members = [
   "metabonding",
   "metabonding/meta",
 ]
+
+
+[patch.crates-io]
+elrond-wasm-debug = { git = "https://github.com/multiversx/mx-sdk-rs", package = "elrond-wasm-debug", branch = "reproducible/v0.36.1" }
