--- a/growth-program/Cargo.toml
+++ b/growth-program/Cargo.toml
@@ -11,6 +11,18 @@ path = "src/lib.rs"
 [dependencies.multiversx-sc]
 version = "=0.46.1"
 
+[dependencies.utils]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "0c7f45e"
+
+[dependencies.router]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "0c7f45e"
+
+[dependencies.pair]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "0c7f45e"
+
 [dev-dependencies]
 num-bigint = "0.4.2"
 
