--- a/growth-program/Cargo.toml
+++ b/growth-program/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies.multiversx-sc]
 version = "=0.46.1"
+features = ["esdt-token-payment-legacy-decode"]
 
 [dependencies.utils]
 git = "https://github.com/multiversx/mx-exchange-sc"
@@ -24,6 +25,14 @@ git = "https://github.com/multiversx/mx-exchange-sc"
 rev = "0c7f45e"
 
 [dependencies.week-timekeeping]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "0c7f45e"
+
+[dependencies.energy-query]
+git = "https://github.com/multiversx/mx-exchange-sc"
+rev = "0c7f45e"
+
+[dependencies.simple-lock]
 git = "https://github.com/multiversx/mx-exchange-sc"
 rev = "0c7f45e"
 
