--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ members = [
   "growth-program/meta",
   "metabonding",
   "metabonding/meta",
+  "pair-mock",
+  "pair-mock/meta",
+  "router-mock",
+  "router-mock/meta"
 ]
