--- a/growth-program/Cargo.toml
+++ b/growth-program/Cargo.toml
@@ -38,6 +38,9 @@ rev = "0c7f45e"
 
 [dev-dependencies]
 num-bigint = "0.4.2"
+num-traits = "0.2"
+hex = "0.4"
+hex-literal = "0.4.1"
 
 [dev-dependencies.multiversx-sc-scenario]
 version = "=0.46.1"
